--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-  "BASE_URL": "http://localhost:5000/",
+  "BASE_URL": "http://127.0.0.1:5000",
   "timeout": 15000,
   "NAME": "IDmelon",
   "CURRENCY": "USD",
